# dgis_mobile_sdk_full

./: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle  proguard-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
aurora/: CMakeLists.txt  dgis_mobile_sdk_plugin_full.cpp
aurora/data/include/: MapSurfaceBuffer.h  MapSurfaceUtils.h
aurora/data/ru.dgis.sdk/: common-styles.2gis
aurora/data/ru.dgis.sdk/preinstalled/files/: Common_resources-2025.03.672.2gis  Common_resources_routing-2025.03.672.2gis  Common_sound_samples-2024.10.49.2gis  MobileSdkConfigs-2022.03.20.2gis
aurora/data/ru.dgis.sdk/preinstalled/states/: 11.0.0_2023-11-21T08-36-44Z
aurora/include/dgis_mobile_sdk_full/: dgis_mobile_sdk_plugin_full.h
example/: .gitignore  README.md  pubspec.yaml  pubspec_overrides.yaml
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/assets/: custom_styles.2gis
example/aurora/: CMakeLists.txt  main.cpp
example/aurora/desktop/: ru.dgis.flutter_app.desktop
example/aurora/rpm/: ru.dgis.flutter_app.spec
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: fps_graph_painter.dart  main.dart
example/lib/pages/: add_objects.dart  all_map_controls.dart  all_map_widgets.dart  benchmark.dart  calc_position.dart  camera_moves.dart  camera_paths.dart  clustering.dart  common.dart  copyright.dart  custom_style_load.dart  download_territories_page.dart  fps_graph_painter.dart  fps_page.dart  indoor_widget.dart  map_gestures.dart  map_objects_identification.dart  map_snapshot.dart  mini_map.dart  navigator.dart  route_editor.dart  search_page.dart  stateless_screen_with_map.dart  traffic_widget.dart
example/lib/pages/add_objects_widgets/: circle_options_widget.dart  marker_options_widget.dart  model_options_widget.dart  polygon_options_widget.dart  polyline_options_widget.dart
ios/: dgis_mobile_sdk_full.podspec
ios/Classes/: FlutterMetalTexture.h  FlutterMetalTexture.mm  MobileSDKPlugin.h  MobileSDKPlugin.mm
lib/: dgis.dart
lib/l10n/: README.md  dgis_en.arb  dgis_ru.arb
lib/src/platform/: dgis.dart
lib/src/platform/coordinates/: geo_point.dart  geo_point_with_elevation.dart
lib/src/platform/map/: image_loader.dart  map.dart  map_appearance.dart  map_options.dart  map_theme.dart  model_loader.dart  touch_events_observer.dart
lib/src/util/: plugin_name.dart
lib/src/widgets/: either.dart  map_widget_box_shadow.dart  moving_segment_progress_indicator.dart  shadow_gradient.dart  widget_shadows.dart
lib/src/widgets/common/: color_ramp.dart  dgis_color_scheme.dart  formatted_measure.dart  measure_size.dart  no_overscroll_behavior.dart  rounded_corners.dart
lib/src/widgets/directory/: object_card.dart  search.dart  search_bar.dart  search_widget_color_scheme.dart
lib/src/widgets/map/: base_map_state.dart  compass_widget.dart  copyright_widget.dart  indoor_widget.dart  map_widget.dart  map_widget_color_scheme.dart  my_location_widget.dart  themed_map_controlling_widget.dart  themed_map_controlling_widget_state.dart  traffic_widget.dart  zoom_button_widget.dart  zoom_widget.dart
lib/src/widgets/navigation/: base_map_control.dart  extensions.dart  navigation_layout_widget.dart  navigation_map_control_theme.dart
lib/src/widgets/navigation/better_route_prompt/: better_route_prompt_controller.dart  better_route_prompt_model.dart  better_route_prompt_theme.dart  better_route_prompt_widget.dart
lib/src/widgets/navigation/compass/: compass_controller.dart  compass_model.dart  compass_theme.dart  compass_widget.dart
lib/src/widgets/navigation/dashboard/: dashboard_controller.dart  dashboard_model.dart  dashboard_theme.dart  dashboard_widget.dart
lib/src/widgets/navigation/finish_route/: finish_route_controller.dart  finish_route_model.dart  finish_route_theme.dart  finish_route_widget.dart
lib/src/widgets/navigation/maneuvers/: maneuver_controller.dart  maneuver_model.dart  maneuver_theme.dart  maneuver_widget.dart
lib/src/widgets/navigation/my_location/: my_location_controller.dart  my_location_model.dart  my_location_widget.dart
lib/src/widgets/navigation/parking/: parking_controller.dart  parking_model.dart  parking_widget.dart
lib/src/widgets/navigation/speed_limit/: camera_progress_theme.dart  speed_limit_controller.dart  speed_limit_model.dart  speed_limit_theme.dart  speed_limit_widget.dart  speed_limit_widget_theme.dart  speedometer_theme.dart
lib/src/widgets/navigation/traffic/: traffic_controller.dart  traffic_model.dart  traffic_widget.dart  traffic_widget_theme.dart
lib/src/widgets/navigation/traffic_line/: traffic_line_color_scheme.dart  traffic_line_controller.dart  traffic_line_model.dart  traffic_line_segments_colors.dart  (+1 more)
(+5 files in other folders)
